# RAG_TEXT

./: .env.example  .gitignore  requirements.txt  sample_content.txt
app/: main.py
app/api/v1/: chat.py  ingestion.py
app/api/v1/routers/: document_ingestion.py  rag_conversation.py
app/core/: config.py  logging.py
app/models/: document.py  vector_store.py
app/services/: booking_handler.py  rag_service.py  text_extractor.py
app/utils/: db.py  embeddings.py  redis_memory.py  text.py
modular-fastapi-backend/: .gitignore  pyproject.toml  render.yaml  requirements.txt
modular-fastapi-backend/app/api/v1/: __init__.py  deps.py
modular-fastapi-backend/app/db/: session.py
modular-fastapi-backend/app/schemas/: document.py  rag.py
modular-fastapi-backend/app/services/: embeddings.py  ingestion_service.py  vectorstore.py
modular-fastapi-backend/app/utils/: chunking.py
modular-fastapi-backend/tests/: conftest.py  test_rag_conversation.py
tests/: test_document_ingestion.py
